tests/miniJava/neg/005266_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] return java ( ) { return 0 ; } }
